--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "astro-theme-thought-lite",
+	"packageManager": "pnpm@10.25.0",
 	"type": "module",
 	"private": true,
 	"version": "0.30.9",
